Update project files

--- a/src/main/resources/static/shop-details.html
+++ b/src/main/resources/static/shop-details.html
@@ -125,7 +125,7 @@
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="../templates/shoping-cart.html">Shoping Cart</a></li>
+                                    <li><a href="../templates/shopping-cart.html">Shoping Cart</a></li>
                                     <li><a href="./checkout.html">Check Out</a></li>
                                     <li><a href="./wisslist.html">Wisslist</a></li>
                                     <li><a href="./Class.html">Class</a></li>
