--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -124,7 +124,7 @@
                             <li><a href="/shop">Shop</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
-                                    <li><a href="/shoping-cart">Shoping Cart</a></li>
+                                    <li><a href="/shopping-cart">Shopping Cart</a></li>
                                     <li><a href="./checkout.html">Check Out</a></li>
                                     <li><a href="./wisslist.html">Wisslist</a></li>
                                     <li><a href="./Class.html">Class</a></li>
